--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       </div>
 
     </div>
-    <script type="text/javascript" src="/JS/player.js"></script>
-    <script type="text/javascript" src="/JS/background.js"></script>
-    <script type="text/javascript" src="/JS/obstacle.js"></script>
-    <script type="text/javascript" src="/JS/index.js"></script>
+    <script type="text/javascript" src="./JS/player.js"></script>
+    <script type="text/javascript" src="./JS/background.js"></script>
+    <script type="text/javascript" src="./JS/obstacle.js"></script>
+    <script type="text/javascript" src="./JS/index.js"></script>
   </body>
 </html>
