added game js file and game class

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       </div>
 
     </div>
+    <script type="text/javascript" src="./JS/Game.js"></script>
     <script type="text/javascript" src="./JS/player.js"></script>
     <script type="text/javascript" src="./JS/background.js"></script>
     <script type="text/javascript" src="./JS/obstacle.js"></script>
